# question1

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
devel/include/msg/: req.h
devel/include/srv/: communicate.h  communicateRequest.h  communicateResponse.h
devel/lib/control_joint/: control  listen
devel/lib/msg/: listener  talker
devel/lib/pkgconfig/: control_joint.pc  msg.pc  srv.pc  straight_leg.pc
devel/lib/python3/dist-packages/msg/msg/: __init__.py  _req.py
devel/lib/python3/dist-packages/srv/srv/: __init__.py  _communicate.py
devel/lib/srv/: client  server
devel/lib/straight_leg/: leg
devel/share/common-lisp/ros/msg/msg/: req.lisp  (+2 more)
devel/share/control_joint/cmake/: control_jointConfig.cmake
devel/share/msg/cmake/: msg-msg-extras.cmake  msg-msg-paths.cmake  msgConfig.cmake
devel/share/roseus/ros/msg/: manifest.l
devel/share/roseus/ros/srv/: manifest.l
devel/share/srv/cmake/: srv-msg-extras.cmake  srv-msg-paths.cmake  srvConfig.cmake
devel/share/straight_leg/cmake/: straight_legConfig.cmake
src/1_srv/: CMakeLists.txt
src/1_srv/src/: client.cpp  server.cpp
src/2_msg/src/: listener.cpp  talker.cpp
src/3_control_joint/: CMakeLists.txt  package.xml
src/3_control_joint/src/: control.cpp  listen.cpp
src/4_straight_leg/: package.xml
src/4_straight_leg/src/: leg.cpp
src/control_joint/src/: control.cpp
src/msg/: CMakeLists.txt  package.xml
src/msg/msg/: req.msg
src/msg/src/: listener.cpp  talker.cpp
src/srv/srv/: communicate.srv
src/straight_leg/: CMakeLists.txt
src/straight_leg/src/: leg.cpp
(+10 files in other folders)
